--- a/controllers/mycontrollers/config_relation.yaml
+++ b/controllers/mycontrollers/config_relation.yaml
@@ -16,3 +16,12 @@ items:
     manage:
         form: $/arteriaweb/catalog/models/item/fields.yaml
         list: $/arteriaweb/catalog/models/item/columns.yaml
+
+sizes:
+    label: Size
+    view:
+        list: $/arteriaweb/catalog/models/size/columns.yaml
+        toolbarButtons: create|delete
+    manage:
+        form: $/arteriaweb/catalog/models/size/fields.yaml
+        list: $/arteriaweb/catalog/models/size/columns.yaml
