--- a/controllers/mycontrollers/config_relation.yaml
+++ b/controllers/mycontrollers/config_relation.yaml
@@ -1,13 +1,3 @@
-Sizes:
-    label: Size
-    view:
-        list: $/arteriaweb/catalog/models/size/columns.yaml
-        toolbarButtons: create|delete
-    manage:
-        form: $/arteriaweb/catalog/models/size/fields.yaml
-        list: $/arteriaweb/catalog/models/size/columns.yaml
-
-
 items:
     label: Item
     view:
@@ -17,7 +7,16 @@ items:
         form: $/arteriaweb/catalog/models/item/fields.yaml
         list: $/arteriaweb/catalog/models/item/columns.yaml
 
-sizes:
+kind:
+    label: Kind
+    view:
+        toolbarButtons: create|link|unlink
+        form: $/arteriaweb/catalog/models/kind/fields_kind_filtered.yaml
+    manage:
+        form: $/arteriaweb/catalog/models/kind/fields.yaml
+        list: $/arteriaweb/catalog/models/kind/columns.yaml
+
+size:
     label: Size
     view:
         list: $/arteriaweb/catalog/models/size/columns.yaml
