--- a/models/packaging/fields.yaml
+++ b/models/packaging/fields.yaml
@@ -5,11 +5,15 @@
 fields:
     id:
         label: ID
-        disabled: true
+        # disabled: true
 
     packaging_name:
-        label: kiszerelés
+        label: Kiszerelés
         span: left
+
+    slug:
+        label: Slug
+        span: right
         preset:
             field: packaging_name
             type: slug
